--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
+ParameterSchedulers = "d7d3b36b-41b8-4d0d-a2bf-768c6151755e"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PlotThemes = "ccf2f8ad-2431-5c83-bf29-c5338b663b6a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
