cubes working-ish

--- a/Project.toml
+++ b/Project.toml
@@ -12,12 +12,15 @@ DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
+ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
+ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 ImageTracking = "7632190a-71f5-11e9-04ef-99e081817785"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+MLDataUtils = "cc2ba9b6-d476-5e6d-8eaf-a92d5412d41d"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
 ParameterSchedulers = "d7d3b36b-41b8-4d0d-a2bf-768c6151755e"
